# oi-int

./: CMakeLists.txt  OIDecoder.cpp  README.md  interpreter.cpp  machine.cpp  main.cpp
include/: interpreter.hpp  machine.hpp
